renamed services.txt to services.html and changed main page text

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
     </div>
   </nav>
-  <h1>Hello, world!</h1>
+  <h1>Hello, Kassie!</h1>
   <div id="cookie-notice" class="position-fixed bottom-0 w-100 p-2 text-bg-dark">
     <p>This website uses cookies so that we can provide you with the best website experience. By clicking “I Accept” you acknowledge the use of cookies and to our <a href="#"><u>Privacy Policy</u></a>.</p>
     <button type="button" id="i-accept" class="btn btn-primary">I Accept</button>
