--- a/index.html
+++ b/index.html
@@ -62,24 +62,21 @@
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Fun Stuff</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Fun Stuff
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="lists.html">Lists</a></li>
+              <li><a class="dropdown-item" href="#">Game</a></li>
+              <li><a class="dropdown-item" href="#">Placeholder</a></li>
+            </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="pricing.html">Pricing</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact Me</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown link
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
           </li>
         </ul>
       </div>
