Update the footer
This commit will change the placeholder to my name and the main
text of the site to Hello, World!

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
   </div>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Kassandra Zimmerman</a>
+      <a class="navbar-brand" href="">Kassandra Zimmerman</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
@@ -82,14 +82,14 @@
       </div>
     </div>
   </nav>
-  <h1>Hello, Kassie!</h1>
+  <h1>Hello, World!</h1>
   <div id="cookie-notice" class="position-fixed bottom-0 w-100 p-2 text-bg-dark">
     <p>This website uses cookies so that we can provide you with the best website experience. By clicking “I Accept” you acknowledge the use of cookies and to our <a href="#"><u>Privacy Policy</u></a>.</p>
     <button type="button" id="i-accept" class="btn btn-primary">I Accept</button>
   </div>
   <!--[if IE]><div class="position-fixed bottom-0 w-100 p-2 text-bg-dark d-flex justify-content-between"><p>Outdated browser dectected. Please use a modern browser for a better browsing experience.</p><button type="button" class="btn-close btn-close-white" onClick="parentNode.remove()" aria-label="Close"></button></div><![endif]-->
   <footer>
-    <small>© <script>document.write(new Date().getFullYear())</script> Your company name. All Rights Reserved.</small></footer>
+    <small>© <script>document.write(new Date().getFullYear())</script> Kassandra Zimmerman. All Rights Reserved.</small></footer>
   </footer>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
