--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
       </div>
     </div>
   </nav>
-  <h1>Hello, World!</h1>
+  <h2>I am Kassandra Zimmerman</h1>
+  <h1>Let’s design something beautiful together!</h1>
+  <p>Branding, products, packaging, manuals, websites… you name it!</p>
+  <p>Got a project? Contact me!</p>
   <div id="cookie-notice" class="position-fixed bottom-0 w-100 p-2 text-bg-dark">
     <p>This website uses cookies so that we can provide you with the best website experience. By clicking “I Accept” you acknowledge the use of cookies and to our <a href="#"><u>Privacy Policy</u></a>.</p>
     <button type="button" id="i-accept" class="btn btn-primary">I Accept</button>
