--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   </div>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="">Kassandra Zimmerman</a>
+      <a class="navbar-brand" href="">
+        <img src="rsc/logos/black-on-clear.png" width="30" height="30" alt="Kassandra Zimmerman's Logo">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
