Add flex spacing to list in navbar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav d-flex justify-content-between">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="">Home</a>
           </li>
