--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid d-flex justify-content-between">
+    <div class="container-fluid">
       <a class="navbar-brand" href="">
         <img src="rsc/logos/black-on-clear.png" width="30" height="30" alt="Kassandra Zimmerman's Logo">
       </a>
@@ -38,7 +38,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav d-flex justify-content-between">
+        <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="">Home</a>
           </li>
