--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Hello, world!</title>
+  <title>Kassandra Zimmerman's From-Scratch Portfolio</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -26,21 +26,17 @@
     </div>
   </div>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="">
-        <img src="rsc/logos/black-on-clear.png" width="30" height="30" alt="Kassandra Zimmerman's Logo">
+    <div class="menu-bar container-fluid">
+      <a class="navbar-brand" href="index.html">
+        <img src="rsc/logos/black-on-clear.png" width="50" height="50" alt="Kassandra Zimmerman's Logo">
       </a>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <div class="collapse navbar-collapse d-inline-flex" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
@@ -53,7 +49,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Fun Stuff
+              Fun
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="lists.html">Lists</a></li>
@@ -65,10 +61,13 @@
             <a class="nav-link" href="pricing.html">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Me</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="menu-search-bar form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      </form>
     </div>
   </nav>
   <h2>I am Kassandra Zimmerman</h1>
