--- a/index.html
+++ b/index.html
@@ -80,7 +80,18 @@
   </div>
   <!--[if IE]><div class="position-fixed bottom-0 w-100 p-2 text-bg-dark d-flex justify-content-between"><p>Outdated browser dectected. Please use a modern browser for a better browsing experience.</p><button type="button" class="btn-close btn-close-white" onClick="parentNode.remove()" aria-label="Close"></button></div><![endif]-->
   <footer>
-    <small>© <script>document.write(new Date().getFullYear())</script> Kassandra Zimmerman. All Rights Reserved.</small></footer>
+    <div class="row">
+      <div class="col-3">
+        <img class="footer-sections" src="rsc/logos/white-on-clear.png" width="200" height="200" alt="Kassandra Zimmerman's Logo">
+      </div>
+      <div class="col-6">
+        <h3 class="med-section-titles">About Me</h3>
+        <p>I’m a multitalented freelancer and creative entrepreneur. I focus on visual communication, education, strategy and development. In all things, I am strategic.</p>
+        <small>© <script>document.write(new Date().getFullYear())</script> Kassandra Zimmerman. All Rights Reserved.</small>
+      </div>
+      <div  class="col-3">
+      </div>
+    </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
