Switch png logos with svgs and add footer to all
This commit will add the footer to all of the remaining pages
that exist. It also formats it slightly better and replaces the
png logo files with the svg ones uploaded in the previous commit.

--- a/lists.html
+++ b/lists.html
@@ -28,7 +28,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="menu-bar container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="rsc/logos/black-on-clear.png" width="50" height="50" alt="Kassandra Zimmerman's Logo">
+        <img src="rsc/logos/black-on-clear.svg" width="50" height="50" alt="Kassandra Zimmerman's Logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -87,7 +87,18 @@ Lists
   </div>
   <!--[if IE]><div class="position-fixed bottom-0 w-100 p-2 text-bg-dark d-flex justify-content-between"><p>Outdated browser dectected. Please use a modern browser for a better browsing experience.</p><button type="button" class="btn-close btn-close-white" onClick="parentNode.remove()" aria-label="Close"></button></div><![endif]-->
   <footer>
-    <small>© <script>document.write(new Date().getFullYear())</script> Kassandra Zimmerman. All Rights Reserved.</small></footer>
+    <div class="row">
+      <div class="col-3">
+        <img src="rsc/logos/white-on-clear.svg" width="150" height="150" alt="Kassandra Zimmerman's Logo">
+      </div>
+      <div class="col-6">
+        <h3 class="med-section-titles">About Me</h3>
+        <p>I’m a multitalented freelancer and creative entrepreneur. I focus on visual communication, education, strategy and development. In all things, I am strategic.</p>
+      </div>
+      <div  class="col-3">
+      </div>
+    </div>
+    <small class="copyright-line">© <script>document.write(new Date().getFullYear())</script> Kassandra Zimmerman. All Rights Reserved.</small>
   </footer>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
