Correct the foot alignment and add min heights

--- a/lists.html
+++ b/lists.html
@@ -71,15 +71,13 @@
     </div>
   </nav>
 
-
-
-Lists
-<a class="nav-link" href="lists/books.html">Books</a>
-<a class="nav-link" href="lists/music.html">Music</a>
-<a class="nav-link" href="lists/movies.html">Music</a>
-<a class="nav-link" href="lists/people.html">People</a>
-
-
+  <div class="page-body">
+    Lists
+    <a class="nav-link" href="lists/books.html">Books</a>
+    <a class="nav-link" href="lists/music.html">Music</a>
+    <a class="nav-link" href="lists/movies.html">Music</a>
+    <a class="nav-link" href="lists/people.html">People</a>
+  </div>
 
 <div id="cookie-notice" class="position-fixed bottom-0 w-100 p-2 text-bg-dark">
     <p>This website uses cookies so that we can provide you with the best website experience. By clicking “I Accept” you acknowledge the use of cookies and to our <a href="#"><u>Privacy Policy</u></a>.</p>
@@ -88,10 +86,10 @@ Lists
   <!--[if IE]><div class="position-fixed bottom-0 w-100 p-2 text-bg-dark d-flex justify-content-between"><p>Outdated browser dectected. Please use a modern browser for a better browsing experience.</p><button type="button" class="btn-close btn-close-white" onClick="parentNode.remove()" aria-label="Close"></button></div><![endif]-->
   <footer>
     <div class="row">
-      <div class="col-3">
+      <div class="footer-logo col-3">
         <img src="rsc/logos/white-on-clear.svg" width="150" height="150" alt="Kassandra Zimmerman's Logo">
       </div>
-      <div class="col-6">
+      <div class="footer-text col-6">
         <h3 class="med-section-titles">About Me</h3>
         <p>I’m a multitalented freelancer and creative entrepreneur. I focus on visual communication, education, strategy and development. In all things, I am strategic.</p>
       </div>
