--- a/lists/music.html
+++ b/lists/music.html
@@ -71,10 +71,9 @@
     </div>
   </nav>
 
+  <div class="page-body">
 
-
-
-
+  </div>
 
   <div id="cookie-notice" class="position-fixed bottom-0 w-100 p-2 text-bg-dark">
     <p>This website uses cookies so that we can provide you with the best website experience. By clicking “I Accept” you acknowledge the use of cookies and to our <a href="#"><u>Privacy Policy</u></a>.</p>
@@ -83,10 +82,10 @@
   <!--[if IE]><div class="position-fixed bottom-0 w-100 p-2 text-bg-dark d-flex justify-content-between"><p>Outdated browser dectected. Please use a modern browser for a better browsing experience.</p><button type="button" class="btn-close btn-close-white" onClick="parentNode.remove()" aria-label="Close"></button></div><![endif]-->
   <footer>
     <div class="row">
-      <div class="col-3">
+      <div class="footer-logo col-3">
         <img src="../rsc/logos/white-on-clear.svg" width="150" height="150" alt="Kassandra Zimmerman's Logo">
       </div>
-      <div class="col-6">
+      <div class="footer-text col-6">
         <h3 class="med-section-titles">About Me</h3>
         <p>I’m a multitalented freelancer and creative entrepreneur. I focus on visual communication, education, strategy and development. In all things, I am strategic.</p>
       </div>
