--- a/lists.html
+++ b/lists.html
@@ -86,17 +86,18 @@
   <!--[if IE]><div class="position-fixed bottom-0 w-100 p-2 text-bg-dark d-flex justify-content-between"><p>Outdated browser dectected. Please use a modern browser for a better browsing experience.</p><button type="button" class="btn-close btn-close-white" onClick="parentNode.remove()" aria-label="Close"></button></div><![endif]-->
   <footer>
     <div class="row">
-      <div class="footer-logo col-3">
+      <div class="footer-right col-3">
         <img src="rsc/logos/white-on-clear.svg" width="150" height="150" alt="Kassandra Zimmerman's Logo">
       </div>
       <div class="footer-text col-6">
         <h3 class="med-section-titles">About Me</h3>
         <p>I’m a multitalented freelancer and creative entrepreneur. I focus on visual communication, education, strategy and development. In all things, I am strategic.</p>
       </div>
-      <div  class="col-3">
+      <div  class="footer-left col-3">
+        <a class="btn btn-primary" href="contact.html" role="button">Got a Project?</br>Contact Me</a>
       </div>
     </div>
-    <small class="copyright-line">© <script>document.write(new Date().getFullYear())</script> Kassandra Zimmerman. All Rights Reserved.</small>
+    <small class="copyright-line">© <script>document.write(new Date().getFullYear())</script> Kassandra Zimmerman | All Rights Reserved | <a href="privacy.html"> Privacy </a> | <a href="terms.html"> Terms </a> | <a href="refunds.html"> Refunds </a></small>
   </footer>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
